# encyclicals-press

./: .gitattributes  .gitignore  COPYRIGHT.md  README.md  pyproject.toml
.github/workflows/: build.yml
corpus/benedict-xvi/: caritas-in-veritate.md  deus-caritas-est.md  spe-salvi.md
corpus/francis/: dilexit-nos.md  fratelli-tutti.md  laudato-si.md  lumen-fidei.md
corpus/leo-xiv/: magnifica-humanitas.md
docs/: ENCYCLICALS.md
scripts/: batch_fetch.py  build-all.sh  lorem_fixtures.py
src/encyclicals_press/: _overrides.py  _url_map.py  cli.py  fetch.py  md_writer.py  normalize.py  parse.py  render.py  schema.py
src/encyclicals_press/parse/: __init__.py  heuristics.py  strategies.py  validate.py
src/encyclicals_press/render/: __init__.py  corpus_reader.py  markdown.py  typst_emitter.py
templates/: default.typ
templates/fonts/: README.md
templates/lib/: colophon.typ  titlepage.typ  typography.typ
tests/: test_heuristics.py  test_normalize.py  test_parse.py  test_strategies.py  test_validate.py
tests/fixtures/: caritas-in-veritate.html  deus-caritas-est.html  dilexit-nos.html  fratelli-tutti.html  laudato-si.html  lumen-fidei.html  magnifica-humanitas.html  spe-salvi.html
