[project]
name = "encyclicals-press"
version = "0.1.0"
description = "Fetch papal encyclicals from vatican.va and typeset them in SCOTUS opinion format."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "selectolax>=0.3.21",
]

[project.scripts]
encyclicals = "encyclicals_press.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/encyclicals_press"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
